# neurodent

./: .gitignore  CLAUDE.md  Pipfile  README.md  Snakefile  TESTING_IMPLEMENTATION_PLAN.md  codecov.yml  commands.txt  html_pyg_walker.html  index.html  mkdocs.yml  pyproject.toml  pytest-dev.ini  pythoneeg.ipynb  pythoneeg.spec  pythoneeg_figures.ipynb  requirements-dev.txt  requirements-linux-3.10.txt  requirements-linux.txt  requirements-mac.txt  requirements-win-3.10.txt  requirements-win-test.txt  requirements-win.txt  requirements.txt  switcher.json  test_runner.py
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🚀-feature-request.md
.github/workflows/: test-build-docs.yml
_static/: switcher.json
config/: config.yaml
docs/: Converting DDF to PyEEG.docx  Raw Data Location.docx  conf.py  generate_switcher.py  index.md  index.rst  redirect_index.html
docs/api/: constants.rst  core.rst  index.rst  visualization.rst
docs/contributing/: index.rst
docs/examples/: index.rst
docs/getting_started/: index.rst
docs/installation/: index.rst
docs/quickstart/: basic_usage.ipynb  data_loading.ipynb  index.rst
docs/reference/: contributing.md  examples.md  tutorials.md  utilities.md
docs/tutorials/: index.rst  snakemake_pipeline.ipynb  spike_analysis.ipynb  visualization.ipynb
docs/tutorials_advanced/: index.rst
extra-hooks/: hook-mne.py  hook-mne_connectivity.py
jupyter_execute/quickstart/: basic_usage.ipynb  configuration.ipynb  data_loading.ipynb
jupyter_execute/tutorials/: snakemake_pipeline.ipynb  spike_analysis.ipynb  visualization.ipynb  windowed_analysis.ipynb
main/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
main/_modules/: index.html
main/_sources/: index.rst.txt
main/api/: constants.html  index.html
main/contributing/: index.html
main/examples/: index.html
main/installation/: index.html
main/license/: index.html
main/quickstart/: basic_usage.html  configuration.html  data_loading.html  index.html
main/tutorials/: index.html  snakemake_pipeline.html  spike_analysis.html  visualization.html  windowed_analysis.html
matlab/: main.mlx  main_test.m  main_test.mlappinstall  main_test.prj  untitled1.prj
notebooks/deprecated/: pythoneeg.ipynb  pythoneeg_figures.ipynb
notebooks/examples/: pipeline-alphadelta.py  pipeline-apfig-artifact.py  pipeline-apfig-fromsave.py  pipeline-apfig-sox5.py  pipeline-apfig.py  pipeline-epfig-so.py  pipeline-sar.py  pipeline-sar.sh  pipeline-war-ARXRosa.py  pipeline-war-davidson2.py  pipeline-war-nspike.py  pipeline-war-nspike.sh  pipeline-war-sox5.py  pipeline-war.py  pipeline-war.sh  pipeline-warfig.py  pipeline-warfig.sh  pipeline.ipynb  pipeline.sh  plot_eeg_snippets.py
notebooks/tests/: get all animal names.ipynb  sox5 combine genotypes spotfix.json  sox5 combine genotypes.json  sox5.json  test_Joseph_alphadelta.ipynb  test_Joseph_diagnosis.ipynb  test_Joseph_edf_reading.ipynb  test_Joseph_fine_filter.ipynb  test_Joseph_view_fif.ipynb  test_all_functions.ipynb  test_all_functions_Joseph.ipynb  test_all_functions_Joseph_EDF.ipynb  test_all_functions_Joseph_Sox5.ipynb  test_all_functions_Joseph_logfeats.ipynb  test_all_functions_Joseph_mac copy.ipynb  test_all_functions_Joseph_mac.ipynb  test_all_functions_Joseph_matdiff.ipynb  test_all_functions_Joseph_mne.ipynb  test_all_functions_Joseph_stats.ipynb  test_all_functions_Joseph_win.ipynb  test_all_functions_Yong.ipynb  test_all_functions_Yong_binTest.ipynb  test_all_functions_Yong_mne.ipynb  view this pickle.ipynb
pythoneeg/: constants.py  core.py  figures.py
pythoneeg/core/: __init__.py  analysis.py  analyze_frag.py  analyze_sort.py  core.py  frequency_domain_spike_detection.py  sorting.py  utils.py
pythoneeg/visualization/: __init__.py  figures.py  frequency_domain_results.py  results.py
scripts/: manage_logs.sh
src/neurodent/: __init__.py  constants.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_analysis.py  test_analyze_frag.py  test_analyze_sort.py  test_animal_organizer_timestamps.py  test_caching_complete.py  test_constants.py  test_core.py  test_feature_comprehensive.py  test_filtering_and_timestamps.py  test_frequency_domain_integration.py  test_frequency_domain_results.py  test_frequency_domain_spike_detection.py  test_imports.py  test_integration.py  test_lof_evaluation_comprehensive.py  test_manual_timestamps.py  test_manual_timestamps_integration.py  test_matrix_channel_reordering.py  test_notch_filtering.py  test_overlapping_animaldays_bug.py  test_run_tests.py  test_save_bad_channels.py  test_symmetry_matrices.py  test_utils.py  test_visualization.py  test_war_integration.py
v0.2.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.1/_modules/: index.html
v0.2.1/_static/: switcher.json
v0.2.1/api/: constants.html  index.html
v0.2.1/contributing/: index.html
v0.2.1/examples/: index.html
v0.2.1/installation/: index.html
v0.2.1/license/: index.html
v0.2.1/quickstart/: basic_usage.html  configuration.html  data_loading.html  index.html
v0.2.1/tutorials/: index.html  snakemake_pipeline.html  spike_analysis.html  visualization.html  windowed_analysis.html
v0.2.3/: .buildinfo  objects.inv  search.html
v0.2.3/_modules/: index.html
v0.2.3/api/: constants.html
v0.2.3/quickstart/: basic_usage.html  index.html
v0.2.3/tutorials/: snakemake_pipeline.html
workflow/config/: config.yaml  samples.json
workflow/notebooks/: war_data_explorer.ipynb
workflow/rules/: diagnostic_figures.smk  ep_analysis.smk  fdsar_diagnostics.smk  filtering_comparison.smk  final_analysis.smk  lof_evaluation.smk  notebook.smk  temporal_diagnostics.smk  war_channel_filtering.smk  war_flattening.smk  war_fragment_filtering.smk  war_generation.smk  war_quality_filter.smk  war_relfreq_plots.smk  war_standardize.smk  war_zeitgeber.smk  zeitgeber_plots.smk
workflow/scripts/: evaluate_lof_accuracy.py  extract_zeitgeber_features.py  filter_wars_channels.py  filter_wars_fragments.py  flatten_wars.py  generate_diagnostic_figs.py  (+8 more)
(+215 files in other folders)
