[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodent"
version = "0.2.0"
description = "Rodent EEG analysis tools"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Joseph Dong", email = "dongjp@chop.edu" },
    { name = "Yongtaek Oh", email = "ohy2@chop.edu" },
    { name = "Eric Marsh", email = "marshe@chop.edu" },
]
dependencies = [
    "numpy",
    "matplotlib",
    "mne",
    "mne-connectivity",
    # "cmasher", # this is not used directly but is a nice package
    "pandas",
    "spikeinterface",
    "probeinterface",
    "scipy",
    "dask[distributed]",
    "dask-jobqueue",
    "seaborn",
    "pyarrow",
    "statannotations",
    "statsmodels",
    "django",
    "okabeito", # this could be just a line in constants
    "openpyxl",
    "appnope",
    "zarr>=2.18.3",
    "scikit-learn>=1.7.2",
]
requires-python = ">=3.10"
keywords = [
    "EEG",
    "rodent",
    "neuroscience",
    "data analysis",
    "pipeline",
    "PythonEEG",
    "PyEEG",
]

[project.urls]
Homepage = "https://github.com/josephdong1000/neurodent"
Documentation = "https://josephdong1000.github.io/neurodent/"
Repository = "https://github.com/josephdong1000/neurodent"
"Bug Tracker" = "https://github.com/josephdong1000/neurodent/issues"

[dependency-groups]
dev = [
    "snakeviz",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-html>=3.1.0",
    "pytest-json-report>=1.5.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "eeg_data: marks tests that require EEG data files",
    "spikeinterface: marks tests that require spikeinterface",
    "mne: marks tests that require MNE",
    "visualization: marks tests for visualization modules",
    "core: marks tests for core functionality",
]

[tool.coverage.run]
source = ["neurodent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
package = true
default-groups = ["dev"]
